--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ body {
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #333;
+    background: url('background.jpg') no-repeat center center fixed;
+    background-size: cover;
     color: #fff;
 }
 
@@ -12,40 +13,46 @@ body {
     height: 100vh;
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
 
 header {
     padding: 10px;
-    background-color: #222;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    background-color: rgba(34, 34, 34, 0.8);
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    text-align: center;
 }
 
 .wallet-info {
     display: flex;
+    justify-content: center;
     flex-direction: column;
+    margin-bottom: 10px;
 }
 
 .progress-bar-container {
-    width: 100%;
-    height: 20px;
-    background-color: #555;
-    margin-top: 10px;
+    width: 80%;
+    margin: 10px auto;
     position: relative;
 }
 
 .progress-bar {
-    height: 100%;
+    height: 20px;
     background-color: #0f0;
     width: 0;
-    position: absolute;
-    top: 0;
-    left: 0;
+}
+
+.energy-bar-container {
+    width: 80%;
+    margin: 10px auto;
+    position: relative;
 }
 
 .energy-bar {
-    height: 100%;
+    height: 20px;
     background-color: #f00;
     width: 100%;
     position: absolute;
@@ -59,6 +66,7 @@ main {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    position: relative;
 }
 
 .clicker {
@@ -66,22 +74,27 @@ main {
 }
 
 #coin {
-    width: 100px;
+    width: 130px;
     cursor: pointer;
 }
 
-#coin-push {
+#flying-values {
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100px;
+    top: -40px;
+    font-size: 24px;
+    color: #ff0;
 }
 
 .controls {
-    margin-top: 20px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    padding: 10px;
+    background-color: rgba(34, 34, 34, 0.8);
+    width: 100%;
+    position: fixed;
+    bottom: 0;
+    left: 0;
 }
 
 button {
@@ -99,6 +112,6 @@ button:hover {
 
 footer {
     padding: 10px;
-    background-color: #222;
+    background-color: rgba(34, 34, 34, 0.8);
     text-align: center;
 }
