--- a/style.css
+++ b/style.css
@@ -6,6 +6,9 @@ body {
     background: url('background.jpg') no-repeat center center fixed;
     background-size: cover;
     color: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .container {
@@ -20,20 +23,18 @@ header {
     padding: 10px;
     background-color: rgba(34, 34, 34, 0.8);
     width: 100%;
+    text-align: center;
     position: absolute;
     top: 0;
     left: 0;
-    text-align: center;
 }
 
 .wallet-info {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
     margin-bottom: 10px;
 }
 
-.progress-bar-container {
+.progress-bar-container,
+.energy-bar-container {
     width: 80%;
     margin: 10px auto;
     position: relative;
@@ -45,19 +46,10 @@ header {
     width: 0;
 }
 
-.energy-bar-container {
-    width: 80%;
-    margin: 10px auto;
-    position: relative;
-}
-
 .energy-bar {
     height: 20px;
     background-color: #f00;
     width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
 }
 
 main {
@@ -80,9 +72,18 @@ main {
 
 #flying-values {
     position: absolute;
-    top: -40px;
+    top: -50px;
+    left: 0;
+    right: 0;
+    text-align: center;
+}
+
+.flying-value {
+    position: absolute;
     font-size: 24px;
     color: #ff0;
+    opacity: 1;
+    transition: opacity 1s, transform 1s;
 }
 
 .controls {
